# bank-statement-automation

./: .gitignore  HANDOFF.md  account_sheet_links_store.py  app.py  apply_claude_fallback.py  apply_similarity_classifier.py  auth.py  backfill_qtr_month.py  beneficiary_master_cache.json  build_beneficiary_master.py  classification_rulebook.csv  classify_transactions.py  company_sheets_store.py  config.json  credentials_store.py  debug_email.py  description_parser.py  email_reader.py  extract_statement.py  financial_year.py  generate_final_report.py  generate_summary.py  gmail_accounts_store.py  heads.py  history_store.py  narration.py  pyproject.toml  rag_classifier.py  records.json  requirements.txt  resolve_unknowns.py  run_pipeline.py  run_rag_now.py  runtime_paths.py  unlock_pdf.py  upload_to_sheets.py  validate_report.py  web_app.py
.vercel/: repo.json
config/: bank_profiles.json  head_mapping.json  heads_config.json  keywords.json  narration_config.json  party_master.json  summary_config.json
data/: beneficiary_master_cache.json  txn_data.json
scripts/debug/: apply_claude_fallback.py  apply_similarity_classifier.py  build_beneficiary_master.py  check_type_rera_mismatch.py  create_manual_overrides_tab.py  create_rules_tab.py  debug_email.py  find_stale_orange.py  fix_dual_head_rows.py  regenerate_narration.py  resolve_unknowns.py  sweep_navy_blue.py
static/: styles.css
templates/: _history_rows.html  admin_gmail.html  admin_passwords.html  base.html  beneficiary_master.html  error.html  history.html  index.html  login.html  success.html
(+9 files in other folders)
