[project]
name = "bank-statement-automation"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "Flask",
    "pandas",
    "openpyxl",
    "gspread",
    "google-auth",
    "pypdf",
    "pdfplumber",
    "pdfminer.six",
    "pypdfium2",
    "Pillow",
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "psycopg2-binary",
]

[tool.vercel]
entrypoint = "web_app:app"
