[project]
name = "bank-statement-automation"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "Flask",
    "pandas",
    "openpyxl",
    "gspread",
    "google-auth",
    "pypdf",
    "pdfplumber",
    "pdfminer.six",
    "pypdfium2!=5.12.1",  # 5.12.1 ships no manylinux_2_34_x86_64 wheel — breaks Vercel builds
    "Pillow",
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "psycopg2-binary",
    "supabase",
    "groq",
    "scikit-learn",
    "numpy",
]

[tool.vercel]
entrypoint = "web_app:app"
